--- a/web/viz.html
+++ b/web/viz.html
@@ -3,21 +3,57 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Classroom Timeline Viz</title>
+    <title>Classroom Focus - Live Monitor</title>
     <style>
-      html,body{height:100%;margin:0;font-family:Segoe UI,Roboto,Arial}
-      #toolbar{padding:8px;background:#f5f5f5;border-bottom:1px solid #ddd}
-      #canvasWrap{display:flex;flex:1}
-      canvas{width:100%;height:calc(100vh - 48px);display:block}
+      html,body{height:100%;margin:0;font-family:Segoe UI,Roboto,Arial;overflow:hidden;}
+      #app {display: flex; flex-direction: column; height: 100%;}
+      #toolbar{padding:8px;background:#f5f5f5;border-bottom:1px solid #ddd; display:flex; align-items:center; gap: 10px;}
+      #main {display:flex; flex:1; overflow:hidden;}
+      #sidebar {width: 200px; background: #fafafa; border-right: 1px solid #eee; overflow-y: auto; padding: 10px;}
+      #canvasWrap{flex:1; position:relative; background: #fff;}
+      canvas{width:100%;height:100%;display:block;}
+      
+      .student-card {
+        margin-bottom: 10px; padding: 5px; border: 1px solid #ddd; border-radius: 4px; background: #fff;
+        display: flex; align-items: center; gap: 8px;
+      }
+      .student-card img {width: 40px; height: 40px; object-fit: cover; border-radius: 50%; background: #ccc;}
+      .student-info {font-size: 12px;}
+      .student-state {font-weight: bold; color: #666;}
+      .state-awake {color: green;}
+      .state-drowsy {color: orange;}
+      .state-down {color: red;}
+      
+      button {padding: 6px 12px; cursor: pointer;}
+      #btnStart {background: #4CAF50; color: white; border: none; border-radius: 3px;}
+      #btnStop {background: #f44336; color: white; border: none; border-radius: 3px;}
+      #btnStop:disabled, #btnStart:disabled {background: #ccc; cursor: not-allowed;}
     </style>
   </head>
   <body>
-    <div id="toolbar">
-      Window(s): <select id="windowSel"><option>10</option><option selected>60</option><option>120</option></select>
-      &nbsp; Show text: <input type="checkbox" id="showText" checked />
-      &nbsp; Status: <span id="status">disconnected</span>
+    <div id="app">
+      <div id="toolbar">
+        <button id="btnStart">Start Recording</button>
+        <button id="btnStop" disabled>Stop Recording</button>
+        <span>Window: <select id="windowSel"><option>30</option><option selected>60</option><option>120</option></select>s</span>
+        <span style="flex:1"></span>
+        <span id="status">disconnected</span>
+        <span id="recStatus" style="font-weight:bold; color:red; display:none;">● REC</span>
+      </div>
+      <div id="main">
+        <div id="sidebar" id="studentList">
+          <!-- Student cards will be injected here -->
+        </div>
+        <div id="canvasWrap">
+          <div id="previewWrap" style="height: calc(100% - 180px);">
+            <canvas id="preview" style="width:100%; height:100%; display:block; background:#000"></canvas>
+          </div>
+          <div id="timelineWrap" style="height:180px; border-top:1px solid #eee;">
+            <canvas id="timeline" style="width:100%; height:100%; display:block"></canvas>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="canvasWrap"><canvas id="timeline"></canvas></div>
     <script src="viz.js"></script>
   </body>
 </html>
