--- a/web/viz.html
+++ b/web/viz.html
@@ -3,68 +3,127 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Classroom Focus - Live Monitor</title>
-    <style>
-      html,body{height:100%;margin:0;font-family:Segoe UI,Roboto,Arial;overflow:hidden;}
-      #app {display: flex; flex-direction: column; height: 100%;}
-      #toolbar{padding:8px;background:#f5f5f5;border-bottom:1px solid #ddd; display:flex; align-items:center; gap: 10px;}
-      #main {display:flex; flex:1; overflow:hidden;}
-      #sidebar {width: 200px; background: #fafafa; border-right: 1px solid #eee; overflow-y: auto; padding: 10px;}
-      #canvasWrap{flex:1; position:relative; background: #fff;}
-      canvas{width:100%;height:100%;display:block;}
-      
-      .student-card {
-        margin-bottom: 10px; padding: 5px; border: 1px solid #ddd; border-radius: 4px; background: #fff;
-        display: flex; align-items: center; gap: 8px;
-      }
-      .student-card img {width: 40px; height: 40px; object-fit: cover; border-radius: 50%; background: #ccc;}
-      .student-info {font-size: 12px;}
-      .student-state {font-weight: bold; color: #666;}
-      .state-awake {color: green;}
-      .state-drowsy {color: orange;}
-      .state-down {color: red;}
-      
-      button {padding: 6px 12px; cursor: pointer;}
-      #btnStart {background: #4CAF50; color: white; border: none; border-radius: 3px;}
-      #btnStop {background: #f44336; color: white; border: none; border-radius: 3px;}
-      #btnStop:disabled, #btnStart:disabled {background: #ccc; cursor: not-allowed;}
-    </style>
+    <title>Classroom Focus Analyzer</title>
+    <link rel="stylesheet" href="./viz.css" />
   </head>
   <body>
-    <div id="app">
-      <div id="toolbar">
-        <button id="btnStart">Start Recording</button>
-        <button id="btnStop" disabled>Stop Recording</button>
-        <button id="btnStats" style="display:none; margin-left:8px;">统计</button>
-        <span>Window: <select id="windowSel"><option>30</option><option selected>60</option><option>120</option></select>s</span>
-        <span style="flex:1"></span>
-        <span id="status">disconnected</span>
-        <span id="recStatus" style="font-weight:bold; color:red; display:none;">● REC</span>
-      </div>
-      <div id="main">
-        <div id="sidebar" id="studentList">
-          <!-- Student cards will be injected here -->
+    <div class="app" id="app">
+      <header class="topbar">
+        <div class="brand">
+          <div class="logo" aria-hidden="true"></div>
+          <div class="brand-title">
+            <div class="title">Classroom Focus Analyzer</div>
+            <div class="subtitle">睡眠/低头检测 · 语音识别 · 知识点对齐</div>
+          </div>
         </div>
-        <div id="canvasWrap">
-          <div id="previewWrap" style="height: calc(100% - 180px);">
-            <canvas id="preview" style="width:100%; height:100%; display:block; background:#000"></canvas>
-            <div id="statsPanel" style="position:absolute; right:12px; top:12px; width:360px; max-height:80%; background:#fff; border:1px solid #ddd; box-shadow:0 6px 18px rgba(0,0,0,0.12); display:none; z-index:50; overflow:auto;">
-              <div style="display:flex; align-items:center; justify-content:space-between; padding:8px 10px; border-bottom:1px solid #eee;">
-                <strong>统计结果</strong>
-                <div>
-                  <button id="statsClose" style="margin-right:8px;">关闭</button>
-                </div>
+
+        <div class="topbar-right">
+          <div class="pill" title="WebSocket 连接状态">
+            <span class="dot unknown" id="wsDot"></span>
+            <span id="wsStatus">disconnected</span>
+          </div>
+          <div class="pill" title="当前会话">
+            <span class="dot unknown" id="recDot"></span>
+            <span id="recStatusText">idle</span>
+            <span class="mono" id="sessionIdText" style="display:none;"></span>
+          </div>
+
+          <button class="btn primary" id="btnStart">开始录制</button>
+          <button class="btn danger" id="btnStop" disabled>停止</button>
+          <button class="btn" id="btnReport" disabled>生成报告</button>
+          <button class="btn ghost" id="btnOpenReport" style="display:none;">查看报告</button>
+        </div>
+      </header>
+
+      <div class="content">
+        <aside class="sidebar">
+          <div class="sidebar-head">
+            <div class="sidebar-head-row">
+              <div class="input" title="按学生 ID 过滤">
+                <input id="studentFilter" placeholder="搜索学生 ID（track_id）…" autocomplete="off" />
               </div>
-              <div id="statsLinks" style="padding:8px 10px; font-size:13px;"></div>
-              <div id="statsTableWrap" style="padding:8px 10px;"></div>
+              <div class="select" title="时间窗">
+                <span>窗口</span>
+                <select id="windowSel">
+                  <option value="30">30s</option>
+                  <option value="60" selected>60s</option>
+                  <option value="120">120s</option>
+                  <option value="300">300s</option>
+                </select>
+              </div>
+            </div>
+            <div class="sidebar-head-row">
+              <div class="select" title="历史会话（out/session_*/stats.json）">
+                <span>历史</span>
+                <select id="sessionSelect">
+                  <option value="">（加载中…）</option>
+                </select>
+              </div>
+              <button class="btn small" id="btnRefreshSessions" title="刷新会话列表">刷新</button>
             </div>
           </div>
-          <div id="timelineWrap" style="height:180px; border-top:1px solid #eee;">
-            <canvas id="timeline" style="width:100%; height:100%; display:block"></canvas>
+          <div class="student-list" id="studentList">
+            <div class="muted" style="padding:8px 4px;">等待人脸轨迹数据…</div>
+          </div>
+        </aside>
+
+        <main class="main">
+          <section class="panel">
+            <div class="panel-head">
+              <div class="panel-title">实时画面</div>
+              <div class="panel-actions">
+                <label class="toggle"><input type="checkbox" id="toggleBoxes" checked />框选</label>
+                <label class="toggle"><input type="checkbox" id="toggleLabels" checked />状态</label>
+                <label class="toggle"><input type="checkbox" id="toggleAsr" checked />ASR</label>
+                <span class="pill" title="渲染帧率"><span class="dot unknown" id="fpsDot"></span><span id="fpsText">0 fps</span></span>
+              </div>
+            </div>
+            <div class="preview-wrap">
+              <canvas id="preview"></canvas>
+            </div>
+            <div class="inspector" id="liveInspector">
+              <span><strong>选中学生：</strong><span id="selectedStudentText">—</span></span>
+              <span><strong>时间：</strong><span class="mono" id="nowText">0.00s</span></span>
+              <span><strong>讲解：</strong><span id="asrNowText" class="muted">（暂无 ASR 段）</span></span>
+            </div>
+          </section>
+
+          <section class="panel">
+            <div class="panel-head">
+              <div class="panel-title">时间轴（点击取点对齐内容）</div>
+              <div class="panel-actions">
+                <button class="btn small" id="btnFollow">跟随实时</button>
+                <button class="btn small" id="btnClearCursor" disabled>清除游标</button>
+              </div>
+            </div>
+            <canvas id="timeline" class="timeline-canvas"></canvas>
+            <div class="inspector" id="cursorInspector" style="display:none;">
+              <span><strong>游标：</strong><span class="mono" id="cursorTimeText">—</span></span>
+              <span><strong>状态：</strong><span id="cursorStateText">—</span></span>
+              <span><strong>讲解：</strong><span id="cursorAsrText" class="muted">—</span></span>
+            </div>
+          </section>
+        </main>
+      </div>
+
+      <div class="modal" id="reportModal" role="dialog" aria-modal="true" aria-labelledby="reportTitle">
+        <div class="drawer">
+          <div class="drawer-head">
+            <div class="drawer-title" id="reportTitle">学习情况报告（睡眠区间 × 讲解内容/知识点）</div>
+            <div style="display:flex; gap:10px; align-items:center;">
+              <button class="btn small" id="btnReloadReport" title="重新拉取统计结果">重载</button>
+              <button class="btn small" id="btnCloseReport">关闭</button>
+            </div>
+          </div>
+          <div class="drawer-body">
+            <div class="kpi-row" id="reportKpis"></div>
+            <div class="links" id="reportLinks"></div>
+            <div id="reportBody" class="muted">尚未生成报告。停止录制后点击“生成报告”。</div>
           </div>
         </div>
       </div>
     </div>
-    <script src="viz.js"></script>
+
+    <script src="./viz.js" defer></script>
   </body>
 </html>
